src/interpreter/snapshots/inlyne__interpreter__tests__num_is_bold.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n```ts\n3000;\n```\n\n --- html\n\n<pre style=\"background-color:#393939;\"><code class=\"language-ts\"><span style=\"font-weight:bold;color:#87d6d5;\">3000</span><span style=\"color:#dedede;\">;\n</span></code></pre>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.04, g: 0.04, b: 0.04 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "3000",
                    font_family: Monospace,
                    color: Some(Color { r: 0.24, g: 0.67, b: 0.67 }),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: ";",
                    font_family: Monospace,
                    color: Some(Color { r: 0.73, g: 0.73, b: 0.73 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
