src/interpreter/snapshots/inlyne__interpreter__tests__numbered_list_prefix.snap
---
source: src/interpreter/tests.rs
description: "This sentence[^1] has two footnotes[^2] followed by a list.\n\n1. Ordered list\n\n[^1]: 1st footnote\n[^2]: 2nd footnote"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            indent: 0.0,
            font_size: 16.0,
            texts: [
                Text {
                    text: "This sentence",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "1",
                    color: Some(
                        [
                            0.088655606,
                            0.13286833,
                            1.0,
                            1.0,
                        ],
                    ),
                    link: Some(
                        "#fn-1",
                    ),
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: " has two footnotes",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "2",
                    color: Some(
                        [
                            0.088655606,
                            0.13286833,
                            1.0,
                            1.0,
                        ],
                    ),
                    link: Some(
                        "#fn-2",
                    ),
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: " followed by a list.",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
            ],
            is_code_block: false,
            is_quote_block: None,
            is_checkbox: None,
            is_anchor: Some(
                "#fnref-2",
            ),
            align: Left,
            hidpi_scale: 1.0,
            padding_height: 0.0,
            background_color: None,
        },
    ),
    Spacer(
        Spacer {
            space: 5.0,
            visible: false,
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            font_size: 16.0,
            texts: [
                Text {
                    text: "1. ",
                    color: None,
                    link: None,
                    is_bold: true,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "Ordered list",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
            ],
            is_code_block: false,
            is_quote_block: None,
            is_checkbox: None,
            is_anchor: None,
            align: Left,
            hidpi_scale: 1.0,
            padding_height: 0.0,
            background_color: None,
        },
    ),
    Spacer(
        Spacer {
            space: 5.0,
            visible: false,
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            font_size: 16.0,
            texts: [
                Text {
                    text: "1. ",
                    color: None,
                    link: None,
                    is_bold: true,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "1st footnote ",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "↩",
                    color: Some(
                        [
                            0.088655606,
                            0.13286833,
                            1.0,
                            1.0,
                        ],
                    ),
                    link: Some(
                        "#fnref-1",
                    ),
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
            ],
            is_code_block: false,
            is_quote_block: None,
            is_checkbox: None,
            is_anchor: Some(
                "#fn-1",
            ),
            align: Left,
            hidpi_scale: 1.0,
            padding_height: 0.0,
            background_color: None,
        },
    ),
    Spacer(
        Spacer {
            space: 5.0,
            visible: false,
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            font_size: 16.0,
            texts: [
                Text {
                    text: "2. ",
                    color: None,
                    link: None,
                    is_bold: true,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "2nd footnote ",
                    color: None,
                    link: None,
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
                Text {
                    text: "↩",
                    color: Some(
                        [
                            0.088655606,
                            0.13286833,
                            1.0,
                            1.0,
                        ],
                    ),
                    link: Some(
                        "#fnref-2",
                    ),
                    is_bold: false,
                    is_italic: false,
                    is_underlined: false,
                    is_striked: false,
                    font_family: SansSerif,
                    hidpi_scale: 1.0,
                    default_color: [
                        0.0,
                        0.0,
                        0.0,
                        1.0,
                    ],
                },
            ],
            is_code_block: false,
            is_quote_block: None,
            is_checkbox: None,
            is_anchor: Some(
                "#fn-2",
            ),
            align: Left,
            hidpi_scale: 1.0,
            padding_height: 0.0,
            background_color: None,
        },
    ),
    Spacer(
        Spacer {
            space: 5.0,
            visible: false,
        },
    ),
    Spacer(
        Spacer {
            space: 5.0,
            visible: false,
        },
    ),
]
