src/interpreter/snapshots/inlyne__interpreter__tests__small_text.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n<small>small</small>\n\n\n --- html\n\n<p><small>small</small></p>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            font_size: 12.0,
            texts: [
                Text {
                    text: "small",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
