src/interpreter/snapshots/inlyne__interpreter__tests__text_styles.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n**bold**\n\n_italic_\n\n~~strikethrough~~\n\n<u>underline</u>\n\n\n --- html\n\n<p><strong>bold</strong></p>\n<p><em>italic</em></p>\n<p><del>strikethrough</del></p>\n<p><u>underline</u></p>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "bold",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "italic",
                    default_color: Color(BLACK),
                    style: ITALIC ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "strikethrough",
                    default_color: Color(BLACK),
                    style: STRIKED ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "underline",
                    default_color: Color(BLACK),
                    style: UNDERLINED ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
