src/interpreter/snapshots/inlyne__interpreter__tests__underline_in_codeblock.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n```rust\nuse std::io;\n```\n\n --- html\n\n<pre style=\"background-color:#282a36;\"><code class=\"language-rust\"><span style=\"color:#ff79c6;\">use </span><span style=\"text-decoration:underline;color:#66d9ef;\">std</span><span style=\"text-decoration:underline;color:#ff79c6;\">::</span><span style=\"color:#f8f8f2;\">io;\n</span></code></pre>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            background_color: Some(Color { r: 0.02, g: 0.02, b: 0.04 }),
            is_code_block: true,
            texts: [
                Text {
                    text: "use ",
                    font_family: Monospace,
                    color: Some(Color { r: 1.00, g: 0.19, b: 0.56 }),
                    ..
                },
                Text {
                    text: "std",
                    font_family: Monospace,
                    color: Some(Color { r: 0.13, g: 0.69, b: 0.86 }),
                    style: UNDERLINED ,
                    ..
                },
                Text {
                    text: "::",
                    font_family: Monospace,
                    color: Some(Color { r: 1.00, g: 0.19, b: 0.56 }),
                    style: UNDERLINED ,
                    ..
                },
                Text {
                    text: "io;",
                    font_family: Monospace,
                    color: Some(Color { r: 0.94, g: 0.94, b: 0.89 }),
                    ..
                },
                Text {
                    text: "\n",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
