src/interpreter/snapshots/inlyne__interpreter__tests__unique_anchors.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n# Foo\n# Foo\n\n\n --- html\n\n<h1>Foo</h1>\n<h1>Foo</h1>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            font_size: 32.0,
            is_anchor: Some("#foo"),
            texts: [
                Text {
                    text: "Foo",
                    default_color: Color(BLACK),
                    style: BOLD UNDERLINED ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            font_size: 32.0,
            is_anchor: Some("#foo"),
            texts: [
                Text {
                    text: "Foo",
                    default_color: Color(BLACK),
                    style: BOLD UNDERLINED ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
