src/interpreter/snapshots/inlyne__interpreter__tests__unordered_list_in_ordered.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n1. 1st outer\n    - bullet\n2. 2nd outer\n\n\n --- html\n\n<ol>\n<li>1st outer\n<ul>\n<li>bullet</li>\n</ul>\n</li>\n<li>2nd outer</li>\n</ol>\n"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st outer",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: " ",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 100.0,
            texts: [
                Text {
                    text: "· ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "bullet",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "2. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "2nd outer",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
